Practice02/log/build_2024-10-19_15-49-31/task02/stderr.log
  File "/workspace/Practice02/install/task02/lib/python3.10/site-packages/task02/task02_node.py", line 35
    Get command-line parameters
        ^^^^^^^
SyntaxError: invalid syntax

